fix sandwich attack
